# symba

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGlPk.cmake
soplex/: make.darwin.clang.opt
